<?xml version="1.0"?>
<package format="2">
  <name>ros_example</name>
  <version>0.0.0</version>
  <description>The ros_example package</description>

  <maintainer email="esteve@apache.org">esteve</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_example_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
