<?xml version="1.0"?>
<package format="2">
  <name>ros_example_msgs</name>
  <version>0.0.0</version>
  <description>The ros_example_msgs package</description>

  <maintainer email="esteve@apache.org">esteve</maintainer>

  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
